deploy: d131242f2761f3a647ba47ca6c80ed55103e59f8

--- a/AnAlternativeVersionofGLWE.html
+++ b/AnAlternativeVersionofGLWE.html
@@ -48,7 +48,7 @@ is flipped in the encryption and decryption formula as follows:
 <!-- l. 139 --><p class='noindent'>For correct decryption, every noise coefficient
 <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>e</mi></mrow><mrow><mi>i</mi></mrow></msub></math> of
 polynomial <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math>
-should be: <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>e</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mstyle displaystyle='true'><mfrac><mrow><mi mathvariant='normal'>Δ</mi>
+should be: <!-- l. 139 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-rel' stretchy='false'>|</mo><msub><mrow><mi>e</mi></mrow><mrow><mi>i</mi></mrow></msub><mo class='MathClass-rel' stretchy='false'>|</mo><mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mstyle displaystyle='true'><mfrac><mrow><mi mathvariant='normal'>Δ</mi>
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle></mrow></math>.
 </p>
  
