--- a/GLev.html
+++ b/GLev.html
@@ -10,10 +10,10 @@
 </head><body>
    <!-- l. 532 --><div class='crosslinks'><p class='noindent'>[<a href='GLWECryptosystem.html'>prev</a>][<a href='PostquantumCryptography.html#GLev.html'>parent</a>][<a href='GGSW.html'>next</a>]</p></div>
    <h3 class='sectionHead' id='glev'><span class='titlemark'>B-5   </span>   <a id='x82-95000B-5'></a>GLev</h3>
-<!-- l. 1 --><p class='noindent'>A GLev ciphertext is a list of GLWE ciphertexts that encrypts the list of plaintexts
+<!-- l. 1 --><p class='noindent'>A GLev ciphertext is a list of GLWE ciphertexts that encrypt the list of plaintexts
 <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
-</mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext> </mtext></mstyle><mstyle class='text'><mtext></mtext><mstyle class='math'><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace></mstyle><mtext></mtext></mstyle><mstyle class='text'><mtext> </mtext></mstyle><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
+</mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mo>…</mo><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>l</mi></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></mrow></math>, where
 <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> is a plaintext encoded in a
 polynomial. Note that each <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>i</mi></math>-th
