--- a/Setup1.html
+++ b/Setup1.html
@@ -12,7 +12,7 @@
                                                                                          
    <!-- l. 5 --><div class='crosslinks'><p class='noindent'>[<a href='RLWECryptosystem1.html#Setup1.html'>parent</a>][<a href='Encryption1.html'>next</a>]</p></div>
    <h4 class='subsectionHead' id='setup1'><span class='titlemark'>B-3.1   </span>   <a id='x73-85000B-3.1'></a>Setup</h4>
-<!-- l. 7 --><p class='noindent'>Let <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> the size of
+<!-- l. 7 --><p class='noindent'>Let <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> be the size of
 plaintext, and <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> the size
 of ciphertext, where <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>t</mi> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mi>q</mi></mrow></math>
 (<!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> is much
@@ -22,10 +22,10 @@ and <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathM
 <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>). Randomly pick
 a <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree polynomial
 <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>S</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub></mrow></math> whose coefficients
-are either <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn></mrow></math> as a
+are either <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math> as a
 secret key. Let <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mrow><mo fence='true' form='prefix'>⌊</mo><mrow><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
 </mrow><mrow><mi>t</mi></mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></mrow></math>
-the scaling factor of plaintext.
+be the scaling factor of plaintext.
 </p><!-- l. 9 --><p class='indent'>   Notice that RLWE’s setup parameters are similar to that of LWE. One difference is that
 <!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math> is not a vector of
 length <!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>k</mi></math> sampled
