--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ for Fully Homomorphic Encryption</h1>
 <br />   <span class='sectionToc'>A-8 <a href='CyclotomicPolynomial.html#cyclotomic-polynomial' id='QQ2-33-42'>Cyclotomic Polynomial</a></span>
 <br />   <span class='subsectionToc'>A-8.1 <a href='Definitions4.html#definitions4' id='QQ2-34-43'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-8.2 <a href='Theorems3.html#theorems3' id='QQ2-35-44'>Theorems</a></span>
-<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings' id='QQ2-36-45'>Roots of Unity and Cyclotomic Polynomial over Rings</a></span>
+<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverFiniteField.html#roots-of-unity-and-cyclotomic-polynomial-over-finite-field' id='QQ2-36-45'>Roots of Unity and Cyclotomic Polynomial over Finite Field</a></span>
 <br />   <span class='sectionToc'>A-10 <a href='VectorandMatrix.html#vector-and-matrix' id='QQ2-37-47'>Vector and Matrix</a></span>
 <br />   <span class='subsectionToc'>A-10.1 <a href='VectorArithmetic.html#vector-arithmetic' id='QQ2-38-48'>Vector Arithmetic</a></span>
 <br />   <span class='subsectionToc'>A-10.2 <a href='VariousTypesofMatrix.html#various-types-of-matrix' id='QQ2-39-49'>Various Types of Matrix</a></span>
