--- a/BasicMath.html
+++ b/BasicMath.html
@@ -48,7 +48,7 @@ post-quantum cryptography.
 <br />   <span class='sectionToc'>A-8 <a href='CyclotomicPolynomial.html#cyclotomic-polynomial'>Cyclotomic Polynomial</a></span>
 <br />   <span class='subsectionToc'>A-8.1 <a href='Definitions4.html#definitions4'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-8.2 <a href='Theorems3.html#theorems3'>Theorems</a></span>
-<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverRings.html#roots-of-unity-and-cyclotomic-polynomial-over-rings'>Roots of Unity and Cyclotomic Polynomial over Rings</a></span>
+<br />   <span class='sectionToc'>A-9 <a href='RootsofUnityandCyclotomicPolynomialoverFiniteField.html#roots-of-unity-and-cyclotomic-polynomial-over-finite-field'>Roots of Unity and Cyclotomic Polynomial over Finite Field</a></span>
 <br />   <span class='sectionToc'>A-10 <a href='VectorandMatrix.html#vector-and-matrix'>Vector and Matrix</a></span>
 <br />   <span class='subsectionToc'>A-10.1 <a href='VectorArithmetic.html#vector-arithmetic'>Vector Arithmetic</a></span>
 <br />   <span class='subsectionToc'>A-10.2 <a href='VariousTypesofMatrix.html#various-types-of-matrix'>Various Types of Matrix</a></span>
